# Manager

./: CMakeLists.txt  Manager.pro  README.md  main.cpp  main.qml
Imageviewer/: CMakeLists.txt  FlatButton.qml  ImageDigger.qml  ImageViewer.qml  LocalViewer.qml  directoryTraverse.cpp  imageViewer.h  imageviewer.cpp  imageviewer.pri  imageviewer.qrc  imageviewer_zh_CN.qm  imageviewer_zh_CN.ts  networkImageModel.cpp
